# unicorn

./: .gitignore  Cargo.toml  README.md  flake.nix  prog
benches/: compiled_binary_bench.rs
debug/: runtime_things.rs
debug/src/: lib.rs
examples/: basic_return.uniq  hello.uniq
src/: lib.rs
src/aot/: mod.rs
src/backend/: mod.rs
src/frontend/: mod.rs
src/frontend/parser/: mod.rs
src/frontend/parser/ast/expr/: mod.rs
src/frontend/parser/ast/stmt/: mod.rs
src/general_compiler/: mod.rs
src/general_compiler/function_translator/: mod.rs
src/general_compiler/runtime/: mod.rs
src/general_compiler/runtime/virtual_process/: mod.rs
src/general_compiler/trap/: mod.rs
src/general_compiler/type_def/: mod.rs
src/jit/: mod.rs
src/middleware/: mod.rs
