[package]
name = "unicorn"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = { version = "0.7.0", features = ['html_reports']}

[dependencies]
cranelift = { version = "0.123.0", features = [ 'jit', 'module', 'native', 'object' ] }
peg = "0.8.5"
anyhow = "1"
whirlpool = "0.11.0-rc.0"
base64ct = { version = "1.8.0", features = ["alloc"] }
lazy_static = "1.5.0"